# racc

./: .gitignore  AGENTS.md  AgenticIDE最终设计文档.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  index.html  package.json  tailwind.config.ts  tsconfig.json
.claude/commands/: ship.md
.github/workflows/: release.yml
.superpowers/brainstorm/4655-1773455810/: .server-stopped  card-expanded-view.html  insights-panel-layout.html
docs/: logo-prompts.md
docs/superpowers/plans/: 2026-03-11-cost-tracking.md  2026-03-11-native-pty-bridge-review.md  2026-03-11-native-pty-bridge.md  2026-03-11-session-management-redesign.md  2026-03-11-terminal-bridge-review.md  2026-03-11-terminal-bridge.md  2026-03-13-activity-panel.md  2026-03-13-file-viewer.md  2026-03-13-insights-panel.md  2026-03-13-racc-assistant.md  2026-03-13-task-board.md  2026-03-14-websocket-remote-api.md  (+2 more)
examples/: racc-client.ts
public/: manifest.webmanifest  sw.js
sidecar/: build.sh  package.json  tsconfig.json
sidecar/src/: agent.ts  index.ts  protocol.ts  tools.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/racc-core/: Cargo.toml
src-tauri/racc-core/src/: agent.rs  db.rs  error.rs  events.rs  lib.rs  rtk.rs  supervisor.rs
src-tauri/racc-core/src/commands/: cost.rs  file.rs  git.rs  insights.rs  manager_mcp.rs  merge.rs  mod.rs  planner.rs  planner_mcp.rs  server.rs  session.rs  setup.rs  task.rs  test_manager.rs  transport.rs
src-tauri/racc-core/src/ssh/: mod.rs
src-tauri/racc-core/src/transport/: local_pty.rs  manager.rs  mod.rs  ssh_tmux.rs
src-tauri/racc-server/: Cargo.toml
src-tauri/racc-server/src/: http.rs  main.rs  ws.rs
src-tauri/src/: events.rs  lib.rs  main.rs  ws_server.rs
src-tauri/src/commands/: assistant.rs  cost.rs  db.rs  file.rs  git.rs  insights.rs  merge.rs  mod.rs  planner.rs  server.rs  session.rs  shell.rs  task.rs  test_manager.rs  tmux.rs  transport.rs
src-tauri/src/ssh/: config_parser.rs  mod.rs
src-tauri/src/transport/: local_pty.rs  manager.rs  mod.rs  ssh_tmux.rs
src/components/: SupervisorDashboard.tsx
src/hooks/: useIMEComposition.ts  usePtyBridge.ts  useTmuxBridge.ts
src/services/: eventCapture.ts  ptyManager.ts  ptyOutputParser.ts  setupAgent.ts  transport.ts
src/stores/: assistantStore.ts  fileViewerStore.ts  insightsStore.ts  mergeStore.ts  plannerStore.ts  serverStore.ts  sessionStore.ts  taskStore.ts  testManagerStore.ts
src/types/: assistant.ts  cost.ts  file.ts  insights.ts  merge.ts  planner.ts  server.ts  session.ts  task.ts  testManager.ts
src/utils/: mergeManager.test.ts  mergeManager.ts  openExternalUrl.ts  prUrl.ts
wiki/: Agent-Supervisor-Design.md  Cognitive-Design-Research.md  Competitive-Analysis.md  Feature-Specification.md  Headless-Server-Design.md  Headless-Server-Plan.md  Home.md  Product-Vision.md  RTK-Token-Optimization.md  Roadmap.md  Session-Lifecycle.md  Technical-Architecture.md  UI-Design.md  User-Guide.md  WebSocket-Remote-API.md
(+46 files in other folders)
