[package]
name = "racc"
version = "0.1.0"
description = "Agentic IDE - A control plane for AI coding agents"
authors = ["you"]
edition = "2021"

[lib]
name = "racc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-pty = "0.2"
ignore = "0.4"
nucleo-matcher = "0.3"
