[workspace]
members = ["racc-core"]
default-members = ["."]

[package]
name = "racc"
version = "0.1.0"
description = "Agentic IDE - A control plane for AI coding agents"
authors = ["callmeyc"]
license = "MIT"
repository = "https://github.com/liu1700/racc"
edition = "2021"

[lib]
name = "racc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
portable-pty = "0.8"
tauri-plugin-notification = "2"
ignore = "0.4"
nucleo-matcher = "0.3"
strsim = "0.11"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
russh = "0.46"
russh-keys = "0.46"
dirs = "5"
racc-core = { path = "racc-core" }
