[package]
name = "racc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
russh = "0.46"
russh-keys = "0.46"
dirs = "5"
log = "0.4"
thiserror = "2"
ignore = "0.4"
nucleo-matcher = "0.3"
strsim = "0.11"
