[package]
name = "racc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "racc-server"
path = "src/main.rs"

[dependencies]
racc-core = { path = "../racc-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
